--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-cozy_aliyun_oss-*.tar
+cozy_oss-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
